--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "seed": "ts-node prisma/seed.ts || node --loader ts-node/esm prisma/seed.ts || node prisma/seed.ts"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/adapter-neon": "^6.17.0",
     "@prisma/client": "^6.16.3",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.18",
