--- a/package.json
+++ b/package.json
@@ -19,28 +19,30 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
-    "@prisma/adapter-neon": "^6.17.0",
-    "@prisma/client": "^6.16.3",
+    "@prisma/adapter-neon": "^6.17.1",
+    "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
-    "next": "15.5.4",
-    "prisma": "^6.16.3",
+    "lightningcss-win32-x64-msvc": "^1.30.2",
+    "next": "15.5.5",
+    "prisma": "^6.17.1",
     "qrcode": "^1.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "zod": "^4.1.11"
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/cli": "^4.1.14",
-    "@tailwindcss/postcss": "^4.1.14",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^24.7.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4.1.14",
+    "eslint-config-next": "15.5.5",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.20.6",
     "typescript": "^5"
   }
